--- a/ObjectPersistenceAndSerialization/src/Tugas/FrontEnd.form
+++ b/ObjectPersistenceAndSerialization/src/Tugas/FrontEnd.form
@@ -63,8 +63,8 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel3" alignment="0" min="-2" pref="31" max="-2" attributes="0"/>
-                          <Component id="nameField" alignment="0" min="-2" pref="203" max="-2" attributes="0"/>
+                          <Component id="nameField" min="-2" pref="203" max="-2" attributes="0"/>
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -77,10 +77,10 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel5" min="-2" pref="76" max="-2" attributes="0"/>
                           <Component id="prodiField" alignment="0" min="-2" pref="203" max="-2" attributes="0"/>
-                          <Component id="jLabel6" alignment="0" min="-2" pref="31" max="-2" attributes="0"/>
                           <Component id="ipkfield" alignment="0" min="-2" pref="203" max="-2" attributes="0"/>
+                          <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -221,6 +221,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Update"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnDelete">
       <Properties>
